# phising_detect

./: .gitignore  LICENSE  README.md  conftest.py  feature_importance.csv  prediction_details.json  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run_project.bat  setup.py
.github/workflows/: ci-cd.yml  main.yml
api/: app.py
deployment/: render.yaml
deployment/docker/: Dockerfile
docs/: ARCHITECTURE.md  COMPLETE_PROJECT_JOURNEY.md  HLD.md  LLD.md  PROJECT_DOCUMENTATION.md  WIREFRAME.md  model_documentation.md
mlartifacts/468033302336163600/05d9df56662d46af8f8183dc13fd1454/artifacts/model/: MLmodel
mlartifacts/468033302336163600/4ba4579ceae24938aeb4a61819da4297/artifacts/model/: MLmodel  conda.yaml  model.pkl  requirements.txt
models/: best_phishing_model.pkl  feature_names.pkl  feature_scaler.pkl
scripts/: setup_secrets.sh
src/: __init__.py  check_data.py  model_training.py  preprocess_data.py  print_features.py  test_prediction.py  test_predictions.py
src/api/: app.py
src/config/: config.py
src/data/: preprocessing.py
src/database/: cassandra_client.py
src/feature_extraction/: __init__.py  feature_extractor.py
src/features/: brand_detection.py  feature_engineering.py
src/models/: run_training.py  train.py
src/tests/: __init__.py  conftest.py  test_api.py  test_feature_extraction.py
src/utils/: start_mlflow.py
src/visualization/: visualize.py
